# Readerbygem

./: Dockerfile  README.md  alembic.ini  db_schema.sql  db_utils.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0e5dc3e28f17_add_new_model.py  196c3f16ff09_add_load_id_back_to_logs.py  44796a6287d0_fix_extract_columns.py  52fe44ff7f75_add_new_model.py  5bc1ecda5eb4_add_new_model.py  7922a0857e9b_add_new_model.py  905fe5985a7e_add_new_model.py  90fc1406558b_add_new_model.py  9a4f997207cd_add_new_model_validation_error.py  a7e997cbe30c_initial_migration.py  e32704de6abf_add_new_model.py
analyzers/: analyzer.py
app/: dependencies.py  main.py
app/dto/: entity_store.py  log.py  process.py
app/routers/: extract.py  process.py
app/services/: analytical_helper_service.py  balance_reprocess_service.py  bucket_service.py  extract_reprocess_service.py  model_service.py  process_service.py
app/utils/: file.py  get_blob_file.py  json_parse.py  model_from_dict.py  safe_parse.py
app/worker/: broker.py
prompts/: bill_audit.txt  bill_prompt.txt  cc_audit.txt  cc_prompt.txt  compra_audit.txt  compra_prompt.txt  cv_audit.txt  cv_prompt.txt  email_audit.txt  email_prompt.txt  existencia_audit.txt  existencia_prompt.txt  extractos_audit.txt  extractos_encargos_reprocess.txt  extractos_movimientos_reprocess.txt  extractos_prompt.txt  ficuciary_balance_reprocess.txt  fiduciary_balance_audit.txt  fiduciary_balance_prompt.txt  pago_audit.txt  pago_prompt.txt  prompt_categorias.txt  rub_audit.txt  rub_prompt.txt  rut_audit.txt  rut_prompt.txt
(+13 files in other folders)
